startups/srdt/apps/elasticsearch/envs/preprod/templates/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srdt-es-allow-from-admin-and-srdt
spec:
  podSelector:
    matchLabels:
      common.k8s.elastic.co/type: elasticsearch
      elasticsearch.k8s.elastic.co/cluster-name: srdt-es
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              common.k8s.elastic.co/type: elasticsearch
              elasticsearch.k8s.elastic.co/cluster-name: srdt-es
      ports:
        - port: 9300
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: srdt-preprod
        # Allow from all namespaces in the Rancher project.
        # This relies on Kyverno mirroring the Rancher-enforced annotation
        # `field.cattle.io/projectId: c-m-97jxtvnv:p-h5hd5` into this label.
        - namespaceSelector:
            matchLabels:
              rancher.projectId: c-m-97jxtvnv-p-h5hd5
      ports:
        - port: 9200
